fix #18 - draft key too small on iphone

--- a/SudokuBlazor/Components/SudokuKeyboard.razor.css
+++ b/SudokuBlazor/Components/SudokuKeyboard.razor.css
@@ -24,12 +24,14 @@
 .row {
     display: flex;
     flex-direction: row;
+    height:10vh;
 }
 
 .row-keyvalue {
     display: flex;
     flex-direction: row;
     align-items: center;
+    height: 10vh;
 }
 
     .row-keyvalue .key {
@@ -44,18 +46,9 @@
     }
 
 .row .key {
-    /* background-color: aqua; */
-    /* align-items: stretch;
-  align-content: center; */
-    /* border-style: dotted; */
     border-radius: 1vw;
     font-size: var(--keyboard-value-fontsize);
-    /* min-width: 9vw; */
-    /* max-width: 9vw; */
-    /* min-height: 5vh; */
-    /* max-height: 5vh; */
     flex: 1;
-    /* margin: 0.3vw; */
     display: flex;
     justify-content: center;
     display: flex;
